Technical documentation updates
streamflow, temps, forage

--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -10,7 +10,9 @@ book:
     - Introduction.qmd
     - HabitatCompressionIndex.qmd
     - SnowWaterEquivalent.qmd
-
+    - MaximumStreamTemperature.qmd
+    - Streamflow
+    - NCCForage
 
 
 format:
