--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -8,7 +8,12 @@ book:
   chapters:
     - index.qmd
     - Introduction.qmd
+    - Upwelling.qmd
+    - MarineHeatwaves.qmd
     - HabitatCompressionIndex.qmd
+    - DissolvedOxygen.qmd
+    - OceanAcidification.qmd
+    - FreshwaterHabitat.qmd
     - SnowWaterEquivalent.qmd
     - MaximumStreamTemperature.qmd
     - Streamflow.qmd
