--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -11,15 +11,16 @@ book:
     - part: Climate and Oceans
       chapters:
       - BasinScaleIndicators.qmd
+      - SST.qmd
       - MarineHeatwaves.qmd
       - Upwelling.qmd
       - HabitatCompressionIndex.qmd
-      - SnowWaterEquivalent.qmd
-      - MaximumStreamTemperature.qmd
-      - Streamflow.qmd
       - DissolvedOxygen.qmd
       - OceanAcidification.qmd
       - FreshwaterHabitat.qmd
+      - SnowWaterEquivalent.qmd
+      - MaximumStreamTemperature.qmd
+      - Streamflow.qmd
     - part: Focal Components of Ecological Integrity
       chapters:
       - Copepods.qmd
@@ -28,14 +29,9 @@ book:
       - NCCForage.qmd
       - CCCForage.qmd
       - SCCForage.qmd
+      - CPSSurvey.qmd
     
-   
-   
     
-   
-    
-   
-
 
 format:
   html:
