updates to appendix
updates and additions

--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - part: General Methods
       chapters:
       - DataCodeAccess.qmd
+      - TimeSeriesQuadplots.qmd
       - TrendAnalysis.qmd
       - SurveyData.qmd
       - ConceptualModels.qmd
