Created figures/ids dir and NPH.qmd file, edited bib file.

--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -23,6 +23,7 @@ book:
       - ONI.qmd
       - PDO.qmd
       - NPGO.qmd
+      - NPH.qmd
       - SST.qmd
       - MarineHeatwaves.qmd
       - Upwelling.qmd
