added Isaac's raw qmd files
Still need to remove figures and add local library call-outs

--- a/ESR-Technical-Documentation/_quarto.yml
+++ b/ESR-Technical-Documentation/_quarto.yml
@@ -25,6 +25,13 @@ book:
       - NPGO.qmd
       - NPH.qmd
       - SST.qmd
+      - JanFebNPH.qmd
+      - SSTspatial.qmd
+      - MarineHeatwaves.qmd
+      - HabitatCompressionIndex.qmd
+      - DepthTimeTemp.qmd
+      - DepthTimeTempGlider.qmd
+      - Upwelling.qmd
       - MarineHeatwaves.qmd
       - Upwelling.qmd
       - HabitatCompressionIndex.qmd
